<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Twitter Client</string>
    
    <!-- Action Bar -->
    <string name="action_settings">Settings</string>
    <string name="action_compose">Compose</string>
    <string name="action_profile">Profile</string>
    <string name="action_logout">Logout</string>
    
    <string name="title_activity_photos">Flickr Photos</string>
    <string name="login_label">Connect to Twitter</string>
    <string name="title_activity_timeline">Home</string>
    <string name="username_label">\@foo</string>
    <string name="max_count">140</string>
    <string name="compose_hint">What\'s happening?</string>
    <string name="tweet">Tweet</string>
    <string name="name_label">Name</string>
    <string name="tagline">Tagline</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="tweets">Tweets</string>
    <string name="body_label">This is the tweet body</string>
    <string name="timestamp_label">7s</string>
    <string name="error_msg_loading_timeline">Problem while loading timeline</string>
    <string name="error_msg_loading_mentions">Problem while loading mentions</string>
    <string name="error_msg_loading_profile">Problem while loading profile info</string>
    <string name="tweet_posted">Tweet sent</string>
    <string name="failed_to_post_tweet">Failed to send tweet</string>
    <string name="timeline">Timeline</string>
    <string name="mentions">Mentions</string>
    <string name="title_activity_profile">Profile</string>

</resources>