<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp" >

    <ImageView
        android:id="@+id/ivProfile"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginLeft="12dp"
        android:background="@color/twitter_blue"
        android:contentDescription="@null" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dp"
        android:layout_toRightOf="@id/ivProfile"
        android:text="@string/name_label"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvUsername"
        style="@style/FaintedTextSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/tvName"
        android:layout_below="@id/tvName"
        android:gravity="center_vertical"
        android:text="@string/username_label" />

    <TextView
        android:id="@+id/tvCount"
        style="@style/FaintedTextSmall"
        android:layout_marginRight="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvName"
        android:layout_toLeftOf="@+id/btnTweet"
        android:gravity="center_vertical"
        android:text="@string/max_count" />

    <Button
        android:id="@id/btnTweet"
        android:layout_marginRight="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:background="@color/twitter_blue"
        android:text="@string/tweet"
        android:textColor="@android:color/white" />

    <EditText
        android:id="@+id/etBody"
        android:inputType="textMultiLine"
        android:gravity="top|left"
        android:hint="@string/compose_hint"
        android:layout_below="@id/btnTweet"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />
    

</RelativeLayout>