<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rlSimpleTweet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="4dp" >

    <ImageView
        android:id="@+id/ivProfileImage"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@null"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="6dp"
        android:layout_toRightOf="@+id/ivProfileImage"
        android:text="@string/name_label"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvUsername"
        style="@style/FaintedTextSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="4dp"
        android:layout_toRightOf="@+id/tvName"
        android:gravity="center_vertical"
        android:text="@string/username_label" />

    <TextView
        android:id="@+id/tvTimestamp"
        style="@style/FaintedTextSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:gravity="center_vertical"
        android:text="@string/timestamp_label" />

    <TextView
        android:id="@+id/tvBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvName"
        android:layout_below="@+id/tvName"
        android:text="@string/body_label" />

</RelativeLayout>
